# tamp-rs

./: .gitmodules  CLAUDE.md  Cargo.toml  README.md
tamp/: Cargo.toml
tamp-sys/: Cargo.toml  README.md  build.rs  wrapper.h
tamp-sys/src/: lib.rs
tamp/examples/: compress_decompress.rs
tamp/src/: compressor.rs  decompressor.rs  lib.rs
